--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "alchemy-sdk": "^2.2.5",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
