--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-promise-tracker": "^2.1.1",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
